Fix overflow.

--- a/resources/public/css/log.css
+++ b/resources/public/css/log.css
@@ -10,6 +10,10 @@ body {
     text-align: center;
 }
 
+#training-log {
+    background-color: #e6e6e6;
+}
+
 .day-name {
     text-align: center;
 }
@@ -19,9 +23,12 @@ body {
 }
 
 .workout-description {
+    background-color: #ddd;
     margin: 14px 0 14px 0;
+    padding: 3px;
 }
 
 .workout-metric {
-    margin-bottom: 6px;
+    margin: 3px 0 3px 0;
 }
+
